2005-11-11  Kevin P. Fleming  <kpfleming@digium.com>

	* apps/app_dial.c (wait_for_answer): correct flag copying for automon feature (issue #5720)

	* channels/chan_iax2.c: correct comment

	* apps/app_voicemail.c (close_mailbox): correct previous commit (issue #5663)
	(vm_change_password): fix password change writing (issue #5721)

	* channels/chan_sip.c (transmit_invite): remove useless debug message; don't try to add OSP tokens to OPTIONS pings

	* apps/app_voicemail.c (close_mailbox): properly remove deleted messages at mailbox close time (issue #5663)

2005-11-11  Mark Spencer <markster@digium.com>

	* channels/chan_zap.c (zt_bridge): only enable/disable DTMF detection on SUB_REAL channels

2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/chan_iax2.c: ensure that system headers that provide basic types are included first (issue #5713)

2005-11-11  Russell Bryant  <russell@digium.com>

	* many files in apps/: Clean up application descriptions. Clarify some wording and make sure they wrap at 80 characters.

2005-11-10  Mark Spencer <markster@digium.com>

	* rtp.c (ast_rtp_raw_write): use unsigned int for return value from calc_txstamp() (issue #5595)
	(calc_txstamp): never return a value that was less than zero before being turned into 'unsigned int' (issue #5595)

2005-11-10  Kevin P. Fleming  <kpfleming@digium.com>

	* include/asterisk/chanspy.h: move spy-related stuff into separate header so chan_h323 can build (issue #5590)

	* include/asterisk/linkedlists.h (AST_LIST_HEAD_SET_NOLOCK): properly initialize tail pointer when list head is directly set (issue #5669)

	* app.c (ast_app_parse_options): ok, so we aren't all perfect... let's make the while loop actually work properly here (issue #5684)

	* apps/app_disa.c (disa_exec): correct password file parsing (issue #5676)

	* apps/app_meetme.c (conf_run): don't restrict admin users from joining a locked conference (issue #5680)

	* channels/chan_misdn.c: include stdio.h (issue #5671)